--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
  @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap');
 
 body {
-  background-color: rgb(123, 169, 212);
+  background-color: rgb(123, 178, 212);
   color: white;
   font-family: 'Playfair Display', serif;
   padding: 5px;
@@ -59,6 +59,24 @@ h1 {
   text-shadow: 1px 1px 1px rgba(50, 50, 50, 0.3);
   line-height: 0.5;
 }
+
+.icon {
+  display: block;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  float: left;
+  padding: 20px;
+}
+
+.icon img {
+  width: auto;
+  height: 100%;
+  /*margin-left: -50px;*/
+}
+
 
 .quote {
   font-size: 2rem;
